--- a/JustOneThingWatch-Watch-App-Info.plist
+++ b/JustOneThingWatch-Watch-App-Info.plist
@@ -7,5 +7,9 @@
 		<string>PermanentMarker-Regular.ttf</string>
 		<string>Quicksand-Variable.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
